<resources>
    <string name="app_name">EatYourLeftovers</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_todo">Todo</string>
    <string name="title_help">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="help_intro">Welcome to our app! Below you will find some FAQ\'s</string>
    <string name="help_1">The leftmost tab is the "Calendar" tab. This is where you can view things you need to do by date.</string>
    <string name="help_2">The center tab is the "To Do" tab where you\'ll see a list of things you need to do.</string>
    <string name="help_3">In the center "To Do" tab, click the + button to add a To Do item.</string>
    <string name="help_4">When you add a To Do Item, fill in the item\'s title, a brief description of the item, the item\'s duration, and the item\'s priority.</string>
    <string name="help_hint">Any questions, comments, or concerns?</string>


    <string name="cal_string">Hello cal fragment</string>
    <string name="todo_string">Hello todo fragment</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
